--- a/src/Catalog.Domain/Catalog.Domain.csproj
+++ b/src/Catalog.Domain/Catalog.Domain.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="10.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.6" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.6" />
   </ItemGroup>
 
 </Project>
